<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/landing_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Humanify"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:layout_gravity="center"
        android:padding="@dimen/expertconnect_padding" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ExpertConnect.Button.Borderless"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/skip"
            android:onClick="onSkipClicked"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:padding="8dp">

            <com.humanify.expertconnect.view.compat.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onLogInClicked"
                android:text="@string/log_in" />

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp"
                tools:ignore="Suspicious0dp" />

            <com.humanify.expertconnect.view.compat.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRegisterClicked"
                android:text="@string/register" />
        </LinearLayout>
    </LinearLayout>
</merge>
