<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.humanify.expertconnect.sample.view.SmartFooterScrollView
        android:id="@+id/registration_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:content="@+id/content"
        app:footer="@+id/footer"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="8dp"
                    android:text="@string/create_account" />

                <include layout="@layout/expertconnect_include_maybe_card_shadow_top" />

                <LinearLayout
                    android:id="@+id/answer_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin" />

                <include layout="@layout/expertconnect_include_maybe_card_shadow_bottom" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="8dp"
                    android:text="@string/all_fields_required" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    layout="@layout/expertconnect_include_maybe_actions_shadow_top"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/expertconnect_compat_shadow_actions" />

                <FrameLayout
                    android:id="@+id/button_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="@dimen/activity_horizontal_margin">

                    <com.humanify.expertconnect.view.compat.MaterialButton
                        android:id="@+id/register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        app:holdr_onClick="true" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

    </com.humanify.expertconnect.sample.view.SmartFooterScrollView>

    <com.humanify.expertconnect.view.LoadingView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.humanify.expertconnect.view.LoadingOverlayView
        android:id="@+id/loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</merge>