<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.humanify.expertconnect.sample.view.SmartFooterScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:content="@+id/content"
        app:footer="@+id/button_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="8dp"
                    android:text="@string/log_in_to_humanify" />

                <include layout="@layout/expertconnect_include_maybe_card_shadow_top" />

                <LinearLayout
                    android:id="@+id/answer_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        style="@style/ExpertConnect.FieldLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:labelFor="@+id/login_email"
                        android:text="@string/email_address" />

                    <EditText
                        android:id="@+id/login_email"
                        style="@style/ExpertConnect.TextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|start"
                        android:imeOptions="actionSend"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <include layout="@layout/expertconnect_include_maybe_card_shadow_bottom" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include
                    layout="@layout/expertconnect_include_maybe_actions_shadow_top"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/expertconnect_compat_shadow_actions"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="@dimen/activity_horizontal_margin">

                    <com.humanify.expertconnect.view.compat.MaterialButton
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:text="@string/log_in"
                        app:holdr_onClick="true" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </com.humanify.expertconnect.sample.view.SmartFooterScrollView>

    <com.humanify.expertconnect.view.compat.TintProgressBar
        android:id="@+id/loading"
        style="@style/AppStyle.LargeProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</merge>